feat: implement base logic and ui
